<?xml version="1.0"?>
<package>
  <name>edo_core</name>
  <version>0.1.0</version>
  <description>The edo_core_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="community@eDO.Cloud">eDOTeam</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://eDO.Cloud</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="@.com">Lazzero Ivan</author>
  <author email="@.com">Primatesta Stefano</author>
  <author email="@.com">Gonizzi Pietro</author>
  <author email="@.com">Bosia Alberto</author>
  <author email="ludus.russo@.com">Russo Ludovico Orlando</author>
  <author email="@.com">Palmieri Stefano</author>
  <author email="@.com"></author>
  <author email="AndreaGaetano.Citrolo@altran.com">Citrolo Andrea Gaetano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>edo_core_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosbridge_library</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>edo_core_msgs</run_depend>
  <run_depend>tinyxml</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
